initial terraform code sync

--- a/.gitignore
+++ b/.gitignore
@@ -287,3 +287,14 @@ __pycache__/
 *.odx.cs
 *.xsd.cs
 *.orig
+
+#  Local .terraform directories
+**/.terraform/*
+
+# .tfstate files
+*.tfstate
+*.tfstate.*
+
+# .tfvars files
+*.tfvars
+*.hcl
